agrego contenido clase 3 corrijo errores

--- a/02-clasehtml/index.html
+++ b/02-clasehtml/index.html
@@ -15,10 +15,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./productos.html">Productos</a>
+                    <a href="./pages/productos.html">Productos</a>
                 </li>
                 <li>
-                    <a href="./nosotros.html">Nosotros</a>
+                    <a href="./pages/nosotros.html">Nosotros</a>
                 </li>
                 <li>
                     <a href="">Productos</a>
